changed a few things

--- a/index.html
+++ b/index.html
@@ -76,8 +76,23 @@
             </div>
         </div>
 
-        <div class="section section-img-r" id="children">
+        <div class="section section-img-r" id="muay-thai">
+            <div class="home-content">
+                <h3 class="section-title">Coed Muay Thai Classes</h3>
+                <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
+                    techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
+                    fists, elbows, knees, and shins. Like most competitive sports, Muay Thai has a heavy focus on body conditioning
+                    to promote the level of fitness and toughness required for ring competition. </p>
+            </div>
+            <div class="home-image">
+                <img src="./assets/images/group-shot.jpg" alt="Muay Thai" class="src">
+            </div>
+        </div>
 
+        <div class="section section-img-l" id="children">
+            <div class="home-image">
+                <img src="./assets/images/IMG_0012.JPG" alt="Children's Class" class="src">
+            </div>
             <div class="home-content">
                 <h3 class="section-title">Children's Classes</h3>
                 <p id="">Children who get involved in martial arts reap many benefits in several areas of life such as: fitness, self-defense,
@@ -86,38 +101,21 @@
                     as well as teach them effective self-defense techniques.
                 </p>
             </div>
-            <div class="home-image">
-                <img src="./assets/images/children.jpg" alt="Children's Class" class="src">
-            </div>
         </div>
 
-        <div class="section section-img-l" id="fitness">
-            <div class="home-image">
-                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Fitness Classes" class="src">
-            </div>
+        <div class="section section-img-r" id="fitness">
             <div class="home-content">
-                <h3 class="section-title">Fitness Classes</h3>
+                <h3 class="section-title">Private Training Sessions</h3>
                 <p id="test">
-                    Physical fitness is a state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations
-                    and daily activities. Physical fitness is generally achieved through proper nutrition, moderate-vigorous
-                    physical exercise, and sufficient rest. Suitable for everyone of all ages, our training regimens include
+                    Private training sessions are the quickest and safest way to get the best results. Suitable for everyone of all ages, our one on one training regimens include
                     running, shadowboxing, rope jumping, body weight resistance exercises, medicine ball exercises, abdominal
                     exercises, and weight training.
                 </p>
             </div>
-        </div>
-
-        <div class="section section-img-r" id="muay-thai">
-            <div class="home-content">
-                <h3 class="section-title">Muay Thai</h3>
-                <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
-                    techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
-                    fists, elbows, knees, and shins. Like most competitive sports, Muay Thai has a heavy focus on body conditioning
-                    to promote the level of fitness and toughness required for ring competition. </p>
-            </div>
             <div class="home-image">
-                <img src="./assets/images/prajioud.jpg" alt="Muay Thai" class="src">
+                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Fitness Classes" class="src">
             </div>
+
         </div>
 
         <div class="section section-img-l" id="grappling">
