updated a few things

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <div class="home-content">
                 <h3 class="section-title">Private Training Sessions</h3>
                 <p id="test">
-                    Private training sessions are the quickest and safest way to get the best results. Suitable for everyone of all ages, our one on one training regimens include
-                    running, shadowboxing, rope jumping, body weight resistance exercises, medicine ball exercises, abdominal
-                    exercises, and weight training.
+                    Private training sessions are the quickest and safest way to get the best results. Suitable for everyone of all ages, our
+                    one on one training regimens include running, shadowboxing, rope jumping, body weight resistance exercises,
+                    medicine ball exercises, abdominal exercises, and weight training.
                 </p>
             </div>
             <div class="home-image">
@@ -167,9 +167,15 @@
         </div>
 
         <div class="footer-section">
-            <div class="footer-logo">
-                <img src="./assets/images/9596014.png" alt="" class="src">
+            <div class="footer-images">
+                <div class="footer-logo">
+                    <img src="./assets/images/9596014.png" alt="" class="src">
+                </div>
+                <div class="footer-prajioud">
+                    <img src="./assets/images/prajioud.jpg" alt="" class="src">
+                </div>
             </div>
+
             <div class="footer-info">
                 <ul>
                     <li>Jim Walters - 732-598-7167</li>
