updated a few things

--- a/photos.html
+++ b/photos.html
@@ -96,11 +96,16 @@
 
 
         <div class="footer-section">
-            <div class="footer-logo">
-                <img src="./assets/images/9596014.png" alt="" class="src">
+            <div class="footer-images">
+                <div class="footer-logo">
+                    <img src="./assets/images/9596014.png" alt="" class="src">
+                </div>
+                <div class="footer-prajioud">
+                    <img src="./assets/images/prajioud.jpg" alt="" class="src">
+                </div>
             </div>
+
             <div class="footer-info">
-                <h4>Phone Numbers:</h4>
                 <ul>
                     <li>Jim Walters - 732-598-7167</li>
                     <li>Linda Walters - 732-841-8886</li>
