--- a/photos.html
+++ b/photos.html
@@ -54,23 +54,103 @@
         </div>
 
 
-        <div id="photos-section">
-            <div id="facebookPhotoGallery">
+        <div class='photos-page-wrapper'>
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image0.jpeg' target='_blank'><img src="./assets/images_21-5-23/image0.jpeg" alt=""></a>
+            </div>
 
-                <div class='embedsocial-album' data-ref="b5929abbbde6ba428be86fdf27e5c6da115792a9"></div>
-                <script>
-                    (function (d, s, id) {
-                        var js;
-                        if (d.getElementById(id)) {
-                            return;
-                        }
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = "https://embedsocial.com/embedscript/ei.js";
-                        d.getElementsByTagName("head")[0].appendChild(js);
-                    }(document, "script", "EmbedSocialScript"));
-                </script>
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image1.jpeg' target='_blank'><img src="./assets/images_21-5-23/image1.jpeg" alt=""></a>
+            </div>
 
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image3.jpeg' target='_blank'><img src="./assets/images_21-5-23/image3.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image4.jpeg' target='_blank'><img src="./assets/images_21-5-23/image4.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image5.jpeg' target='_blank'><img src="./assets/images_21-5-23/image5.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image6.jpeg' target='_blank'><img src="./assets/images_21-5-23/image6.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image7.jpeg' target='_blank'><img src="./assets/images_21-5-23/image7.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image8.jpeg' target='_blank'><img src="./assets/images_21-5-23/image8.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image9.jpeg' target='_blank'><img src="./assets/images_21-5-23/image9.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image10.jpeg' target='_blank'><img src="./assets/images_21-5-23/image10.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image11.jpeg' target='_blank'><img src="./assets/images_21-5-23/image11.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image12.jpeg' target='_blank'><img src="./assets/images_21-5-23/image12.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image13.jpeg' target='_blank'><img src="./assets/images_21-5-23/image13.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image14.jpeg' target='_blank'><img src="./assets/images_21-5-23/image14.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image15.jpeg' target='_blank'><img src="./assets/images_21-5-23/image15.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image16.jpeg' target='_blank'><img src="./assets/images_21-5-23/image16.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image17.jpeg' target='_blank'><img src="./assets/images_21-5-23/image17.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image18.jpeg' target='_blank'><img src="./assets/images_21-5-23/image18.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image19.jpeg' target='_blank'><img src="./assets/images_21-5-23/image19.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image20.jpeg' target='_blank'><img src="./assets/images_21-5-23/image20.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image21.jpeg' target='_blank'><img src="./assets/images_21-5-23/image21.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image22.jpeg' target='_blank'><img src="./assets/images_21-5-23/image22.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+                <a href='./assets/images_21-5-23/image23.jpeg' target='_blank'><img src="./assets/images_21-5-23/image23.jpeg" alt=""></a>
+            </div>
+
+            <div class='photo-wrapper'>
+            </div>
+
+            <div class='photo-wrapper'>
             </div>
         </div>
 
