chore: change group photo in homepage

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     to promote the level of fitness and toughness required for ring competition. </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/group-shot.jpg" alt="Muay Thai" class="src">
+                <img src="./assets/images_21-5-23/image13.jpeg" alt="Muay Thai" class="src">
             </div>
         </div>
 
