refactor: change image directory name

--- a/photos.html
+++ b/photos.html
@@ -115,7 +115,7 @@
 
     const photosSection = document.getElementById("photos");
 
-    xhr.open("GET", "/assets/images_21-5-23", true);
+    xhr.open("GET", "/assets/class-photos", true);
     xhr.responseType = 'document';
     xhr.onload = () => {
         if(xhr.status === 200) {
