fix: minor style tweaks

--- a/coaches.html
+++ b/coaches.html
@@ -57,7 +57,7 @@
                 <img src="./assets/images/jim_profile.jpg" alt="Welcome" class="src">
             </div>
             <div class="coach-description" id="jim-section">
-                <h3 class="" id="jim-header">Jim Walters</h3>
+                <h3 class="coach-header">Jim Walters</h3>
                 <p>
                     Jim Walters started his martial arts journey in 1988. Jim currently holds two black belts in Muay Thai Kickboxing and Korean
                     Combat Karate. Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz.
@@ -67,7 +67,7 @@
 
         <div class="section section-img-r" id="coach-linda">
             <div class="coach-description">
-                <h3 class="" id="">Linda Walters</h3>
+                <h3 class="coach-header">Linda Walters</h3>
                 <p>
                     Linda Walters holds a 3rd degree black belt in Muay Thai. Linda has also been personal training since 1993 with a NASM personal
                     training certification.
