--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
             </div>
             <div class="logo">
-                <img src="./assets/images/9596014.png" alt="" class="src">
+                <img src="./assets/images/9596014.png" alt="">
             </div>
             <div class="social-2 ">
                 <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
@@ -63,7 +63,7 @@
 
         <div class="section section-img-l" id="welcome">
             <div class="home-image">
-                <img src="./assets/images/building_dark.JPG" alt="Welcome" class="src">
+                <img src="./assets/images/building_dark.JPG" alt="Welcome">
             </div>
             <div class="home-content">
                 <h3 class="section-title" id="welcome-header">Welcome</h3>
@@ -78,20 +78,20 @@
 
         <div class="section section-img-r" id="muay-thai">
             <div class="home-content">
-                <h3 class="section-title">Coed Muay Thai Classes</h3>
+                <h3 class="section-title" style="border-bottom: 1px white solid">Coed Muay Thai Classes</h3>
                 <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
                     techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
                     fists, elbows, knees, and shins. Like most competitive sports, Muay Thai has a heavy focus on body conditioning
                     to promote the level of fitness and toughness required for ring competition. </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images_21-5-23/image13.jpeg" alt="Muay Thai" class="src">
+                <img src="./assets/class-photos/image13.jpeg" alt="Muay Thai">
             </div>
         </div>
 
         <div class="section section-img-l" id="children">
             <div class="home-image">
-                <img src="./assets/images/IMG_0012.JPG" alt="Children's Class" class="src">
+                <img src="./assets/images/IMG_0012.JPG" alt="Children's Class">
             </div>
             <div class="home-content">
                 <h3 class="section-title">Children's Classes</h3>
@@ -113,14 +113,14 @@
                 </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Fitness Classes" class="src">
+                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Fitness Classes">
             </div>
 
         </div>
 
         <div class="section section-img-l" id="grappling">
             <div class="home-image">
-                <img src="./assets/images/grappling.jpg" alt="Grappling" class="src">
+                <img src="./assets/images/grappling.jpg" alt="Grappling">
             </div>
             <div class="home-content">
                 <h3 class="section-title">Grappling</h3>
@@ -142,7 +142,7 @@
                 </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/IMG_2526.JPG" alt="Sparring" class="src">
+                <img src="./assets/images/IMG_2526.JPG" alt="Sparring">
             </div>
         </div>
 
@@ -169,10 +169,10 @@
         <div class="footer-section">
             <div class="footer-images">
                 <div class="footer-logo">
-                    <img src="./assets/images/9596014.png" alt="" class="src">
+                    <img src="./assets/images/9596014.png" alt="">
                 </div>
                 <div class="footer-prajioud">
-                    <img src="./assets/images/prajioud.jpg" alt="" class="src">
+                    <img src="./assets/images/prajioud.jpg" alt="">
                 </div>
             </div>
 
