fix: minor style changes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
                 <img src="./assets/images/building_dark.JPG" alt="Welcome">
             </div>
             <div class="home-content">
-                <h3 class="section-title" id="welcome-header">Welcome</h3>
                 <p>
-                    Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
+                    Welcome to Knockout Fitness.  Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
                     counseling and supplements in a positive environment. Students burn calories and get in shape as they
                     sweat through kickboxing and Muay Thai classes led by experienced instructors who are always here to
                     help you.
