--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="section section-img-l" id="children">
             <div class="home-image">
-                <img src="./assets/images/IMG_0012.JPG" alt="Children's Class">
+                <img src="./assets/images/children_home.png" alt="Children's Class">
             </div>
             <div class="home-content">
                 <h3 class="section-title">Children's Classes</h3>
@@ -119,7 +119,7 @@
 
         <div class="section section-img-l" id="grappling">
             <div class="home-image">
-                <img src="./assets/images/grappling.jpg" alt="Grappling">
+                <img src="./assets/images/grappling_home.png" alt="Grappling">
             </div>
             <div class="home-content">
                 <h3 class="section-title">Grappling</h3>
@@ -141,7 +141,7 @@
                 </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/IMG_2526.JPG" alt="Sparring">
+                <img src="./assets/images/sparring_home.png" alt="Sparring">
             </div>
         </div>
 
