feat: change nav links to yellow and schedule changes

--- a/schedule.html
+++ b/schedule.html
@@ -62,7 +62,7 @@
                         <li>7:00 AM - 8:00 AM - Muay Thai</li>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
                         <li>5:00 PM - 5:30 PM - Kids Kickboxing</li>
-                        <li>5:30 PM - 6:30 PM - No Gi Jiu-Jitsu</li>
+                        <li>5:30 PM - 6:00 PM - Adult Sparring</li>
                         <li>6:30 PM - 7:30 PM - Muay Thai</li>
                     </ul>
                 </div>
@@ -72,7 +72,7 @@
                     <ul class='schedule-list'>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
                         <li>5:00 PM - 5:30 PM - Kids Kickboxing</li>
-                        <li>5:30 PM - 6:30 PM - No Gi Jiu-Jitsu</li>
+                        <li>5:30 PM - 6:00 PM - No Gi Jiu-Jitsu</li>
                         <li>6:30 PM - 7:30 PM - Muay Thai</li>
                     </ul>
                 </div>
@@ -83,7 +83,7 @@
                         <li>7:00 AM - 8:00 AM - Muay Thai</li>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
                         <li>5:00 PM - 5:30 PM - Kids Kickboxing</li>
-                        <li>5:30 PM - 6:30 PM - No Gi Jiu-Jitsu</li>
+                        <li>5:30 PM - 6:00 PM - Advanced Muay Thai</li>
                         <li>6:30 PM - 7:30 PM - Muay Thai</li>
                     </ul>
                 </div>
@@ -93,7 +93,7 @@
                     <ul class='schedule-list'>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
                         <li>5:00 PM - 5:30 PM - Kids Kickboxing</li>
-                        <li>5:30 PM - 6:30 PM - No Gi Jiu-Jitsu</li>
+                        <li>5:30 PM - 6:00 PM - No Gi Jiu-Jitsu</li>
                         <li>6:30 PM - 7:30 PM - Muay Thai</li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                     <h2 class='schedule-section-header'>Saturday</h2>
                     <ul class='schedule-list'>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
-                        <li>12:00 PM - 1:00 PM - MMA Class</li>
+                        <li>12:00 PM - 1:00 PM - MMA Training</li>
                     </ul>
                 </div>
             </div>
