chore: schedule changes

--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,7 @@
                     <ul class='schedule-list'>
                         <li>7:00 AM - 8:00 AM - Muay Thai</li>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
-                        <li>5:00 PM - 5:30 PM - Kids Kickboxing</li>
+                        <li>5:00 PM - 5:30 PM - Kids Sparring</li>
                         <li>5:30 PM - 6:00 PM - Adult Sparring</li>
                         <li>6:30 PM - 7:30 PM - Muay Thai</li>
                     </ul>
@@ -104,7 +104,7 @@
                     <ul class='schedule-list'>
                         <li>7:00 AM - 8:00 AM - Muay Thai</li>
                         <li>9:30 AM - 10:30 AM - Muay Thai</li>
-                        <li>5:30 PM - 6:00 PM - MMA Training</li>
+                        <li>5:30 PM - 6:30 PM - MMA Training</li>
                     </ul>
                 </div>
     
